netdata (1.0.0-rc.1) - 2015-11-28

 - initial packaging