@@ -27,3 +27,30 @@ apps.plugin
 netdata.spec
 
 *.tar.*
+
+.cproject
+.idea/
+.project
+CMakeLists.txt
+TODO.md
+asan_symbolize.py
+charts.d/bind.chart.sh
+conf.d/netdata.conf
+conf.d/netdata.conf.old
+isolate-0x1e0e170-v8.log
+lan-hosts.sh
+modp_numtoa.c
+plugins.d/apache_mod_status.plugin
+plugins.d/apps.plugin.old
+src/.cproject
+src/.project
+src/.settings/
+src/TODO.txt
+src/rrddim_file.c
+valgrind.log
+valgrind2.log
+web/chart-info/
+web/control.html
+web/datasource.css
+web/gadget.xml
+web/index_new.html
