@@ -1,3 +1,7 @@
+netdata (1.0.0) - 2016-03-22
+
+ - first public release
+
 netdata (1.0.0-rc.1) - 2015-11-28
 
  - initial packaging
